text overflow fix

--- a/WebClient/lama/src/app/components/main/main-page-header/main-page-header.component.sass
+++ b/WebClient/lama/src/app/components/main/main-page-header/main-page-header.component.sass
@@ -17,6 +17,7 @@ img
 
 header
     width: 100%
+
 datalist div
   font-family: 'FontAwesome'
 
@@ -195,6 +196,15 @@ input::-webkit-calendar-picker-indicator
         i
             font-size: 20px
             vertical-align: top
+
+a.dropdown-item, button.dropdown-item
+    padding-right: 3rem
+    text-align: left
+    white-space: nowrap
+    overflow: hidden
+    width: 100%
+    text-overflow: ellipsis
+
 
 .logout
     margin-left: 10px
